[package]
name = "okra"
version = "0.2.0"
authors = ["Morley, Jonathan <morley.jonathan@gmail.com>"]
edition = "2018"
description = "Rust API client for Okta."
license = "Apache-2.0"
repository = "https://github.com/jonathanmorley/okra"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
url = "2"
hyper = "0.12"
base64 = "0.10"
futures = "0.1"
tokio-core = "0.1"
reqwest = "0.9"
failure = "0.1"

[build-dependencies]
openapi-codegen = "0.1"

[dev-dependencies]
testcontainers = "=0.6.0"
tc_generic = "=0.2.0"
tc_core = "=0.3.0"
